--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <div class="wrapper"></div>
 
+    <script src="js/graphics.js"></script>
     <script src="js/main.js"></script>
-    <script src="js/index.js"></script>
+    <!-- https://svgsilh.com/f44336/search/block-5.html -->
 </body>
 </html>
