--- a/index.html
+++ b/index.html
@@ -2,12 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Title</title>
     <script src="https://d3js.org/d3.v5.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 <body>
-    <div class="wrapper"></div>
+    <div class="page">
+        <div class="first-column">
+            <div id="wrapper"></div>
+            <div id="scale"></div>
+        </div>
+
+        <div id="stats" class="second-column">
+            <h1 align="center">CONTROL PANEL</h1>
+        </div>
+    </div>
 
     <script src="js/graphics.js"></script>
     <script src="js/main.js"></script>
