--- a/index.html
+++ b/index.html
@@ -5,21 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Title</title>
     <script src="https://d3js.org/d3.v5.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css"/>
 </head>
 <body>
-    <div class="page">
-        <div class="first-column">
-            <div id="wrapper"></div>
-            <div id="scale"></div>
-        </div>
-
-        <div id="stats" class="second-column">
-            <h1 align="center">CONTROL PANEL</h1>
+<div class="page">
+    <div class="first-column">
+        <div id="wrapper"></div>
+        <div id="gui">
+            <button id="startBtn" onclick="start()">Start</button>
+            <button id="pauseBtn" onclick="pause()">Pause</button>
+            <label for="speedRange">Time speed</label>
+            <input id="speedRange" type="range" min="0" max="5000"/>
         </div>
     </div>
 
-    <script src="js/main.js"></script>
-    <script src="js/graphics.js"></script>
+    <div id="stats" class="second-column">
+        <h1 align="center">CONTROL PANEL</h1>
+    </div>
+</div>
+
+<script src="js/utils.js"></script>
+<script src="js/main.js"></script>
+<script src="js/graphics.js"></script>
 </body>
 </html>
