--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
         <div id="gui">
             <button id="startBtn" onclick="start()">Start</button>
             <button id="pauseBtn" onclick="pause()">Pause</button>
-            <label for="speedRange">Time speed</label>
+            <label for="speedRange">Fast</label>
             <input id="speedRange" type="range" min="0" max="5000"/>
+            <label for="speedRange">Slow</label>
         </div>
     </div>
 
