--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <div class="gui">
         <button id="startBtn" onclick="start()">Start</button>
         <button id="pauseBtn" onclick="pause()">Pause</button>
+        <br><br>
         <label for="speedRange">Fast</label>
-        <input id="speedRange" type="range" min="0" max="5000"/>
+        <input class="slider" id="speedRange" type="range" min="0" max="5000"/>
         <label for="speedRange">Slow</label>
     </div>
 </div>
