--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="main"></div>
     <div class="gui">
         <button id="startBtn" onclick="start()">Start</button>
-        <button id="pauseBtn" onclick="pause()">Pause</button>
+        <button id="pauseBtn" onclick="pause()" disabled>Pause</button>
         <br><br>
         <label for="speedRange">Fast</label>
         <input class="slider" id="speedRange" type="range" min="0" max="5000"/>
