--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
 </head>
 <body onresize="screenResized()">
-<div class="wrapper">
-    <div class="main"></div>
-    <div class="gui">
-    </div>
+<div class="wrapper"></div>
 </div>
 
 <script src="js/utils.js"></script>
